5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1644_2711.log
== TEST (2019-04-09 17:54:43) 
-- CODE:
verba = float(input("verba:"))
qtickets = int(input("quantidade de tickets:"))
vtickets = int(input("valor do ticket:"))
pbusao = int(input("q de passe:"))
vpassebusao = int(input("valor do passe:"))

if()
-- ERROR:
File "XXXX", line 7
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:57:57) 
-- CODE:
verba = float(input("verba:"))
qtickets = int(input("quantidade de tickets:"))
vtickets = int(input("valor do ticket:"))
pbusao = int(input("q de passe:"))
vpassebusao = int(input("valor do passe:"))

if(verba >= (qtickets* vtickets) + (pbusao*vpassebusao)):
	print(SUFICIENTE)
else:
	print(INSUFICIENTE)
-- EXECUTION TIME:
0.166728
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2711/main.py", line 3, in <module>
    vtickets = int(input())
ValueError: invalid literal for int() with base 10: '1.20'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:58:23) 
-- CODE:
verba = float(input("verba:"))
qtickets = int(input("quantidade de tickets:"))
vtickets = int(input("valor do ticket:"))
pbusao = int(input("q de passe:"))
vpassebusao = int(input("valor do passe:"))

if(verba >= (qtickets* vtickets) + (pbusao*vpassebusao)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.188488
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2711/main.py", line 3, in <module>
    vtickets = int(input())
ValueError: invalid literal for int() with base 10: '1.20'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:58:25) 
-- CODE:
verba = float(input("verba:"))
qtickets = int(input("quantidade de tickets:"))
vtickets = int(input("valor do ticket:"))
pbusao = int(input("q de passe:"))
vpassebusao = int(input("valor do passe:"))

if(verba >= (qtickets* vtickets) + (pbusao*vpassebusao)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.152819
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2711/main.py", line 3, in <module>
    vtickets = int(input())
ValueError: invalid literal for int() with base 10: '1.20'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:58:25) 
-- CODE:
verba = float(input("verba:"))
qtickets = int(input("quantidade de tickets:"))
vtickets = int(input("valor do ticket:"))
pbusao = int(input("q de passe:"))
vpassebusao = int(input("valor do passe:"))

if(verba >= (qtickets* vtickets) + (pbusao*vpassebusao)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vtickets = int(input())
ValueError: invalid literal for int() with base 10: '1.20'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:59:02) 
-- CODE:
verba = float(input("verba:"))
qtickets = int(input("quantidade de tickets:"))
vtickets = float(input("valor do ticket:"))
pbusao = int(input("q de passe:"))
vpassebusao = int(input("valor do passe:"))

if(verba >= (qtickets* vtickets) + (pbusao*vpassebusao)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    vpassebusao = int(input())
ValueError: invalid literal for int() with base 10: '1.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:59:03) 
-- CODE:
verba = float(input("verba:"))
qtickets = int(input("quantidade de tickets:"))
vtickets = float(input("valor do ticket:"))
pbusao = int(input("q de passe:"))
vpassebusao = int(input("valor do passe:"))

if(verba >= (qtickets* vtickets) + (pbusao*vpassebusao)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.112599
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2711/main.py", line 5, in <module>
    vpassebusao = int(input())
ValueError: invalid literal for int() with base 10: '1.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:59:03) 
-- CODE:
verba = float(input("verba:"))
qtickets = int(input("quantidade de tickets:"))
vtickets = float(input("valor do ticket:"))
pbusao = int(input("q de passe:"))
vpassebusao = int(input("valor do passe:"))

if(verba >= (qtickets* vtickets) + (pbusao*vpassebusao)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    vpassebusao = int(input())
ValueError: invalid literal for int() with base 10: '1.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:59:36) 
-- CODE:
verba = float(input("verba:"))
qtickets = int(input("quantidade de tickets:"))
vtickets = float(input("valor do ticket:"))
pbusao = int(input("q de passe:"))
vpassebusao = int(input("valor do passe:"))

if(verba >= (qtickets* vtickets) + (pbusao*vpassebusao)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.14998
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2711/main.py", line 5, in <module>
    vpassebusao = int(input())
ValueError: invalid literal for int() with base 10: '1.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:00:00) 
-- CODE:
verba = float(input("verba:"))
qtickets = int(input("quantidade de tickets:"))
vtickets = float(input("valor do ticket:"))
pbusao = int(input("q de passe:"))
vpassebusao = float(input("valor do passe:"))

if(verba >= (qtickets* vtickets) + (pbusao*vpassebusao)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:00:30) 
-- CODE:
verba = float(input("verba:"))
qtickets = int(input("quantidade de tickets:"))
vtickets = float(input("valor do ticket:"))
pbusao = int(input("q de passe:"))
vpassebusao = float(input("valor do passe:"))

if(verba >= (qtickets* vtickets) + (pbusao*vpassebusao)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.111833
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:32:57) 
-- CODE:
verba = float(input("verba:"))
qtickets = int(input("quantidade de tickets:"))
vtickets = float(input("valor do ticket:"))
pbusao = int(input("q de passe:"))
vpassebusao = float(input("valor do passe:"))

if(verba >= (qtickets* vtickets) + (pbusao*vpassebusao)):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.303596
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
